I want to push this becauase i want to change the configuration of my gateway security config I don't want to add the jwt authentication as filter before in security filter chain but I gonna make its own filter file that extend WebFitler